plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)   
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // основа для контролерів 
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // AOP 
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // JPA репозиторії 
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Валідація 
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // БД для локального/тестового запуску 
    runtimeOnly 'com.h2database:h2'

    // тести
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn test
    reports { xml.required = true; html.required = true }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value   = 'COVEREDRATIO'
                minimum = 0.50
            }
        }
    }
}
check.dependsOn jacocoTestCoverageVerification
